# Lubo_AI_Publisher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  preview.html  pyproject.toml  requirements.txt
config/: schedule.yaml  scraper_sources.yaml  topics.yaml  voice_rules.yaml
deploy/: publisher.lubobali.com.conf  publisher.lubot.ai.conf
docs/: LuBot_Publisher_Plan.txt  aws-practice-plan.txt  video-ads.txt
scripts/: dryrun_biohacker.py  generate_week.py  ingest_books.py  ingest_stock_feeds.py  linkedin_auth.py  make_carousel.py  test_pipeline.py
src/: analytics_worker.py  api.py  backup.py  cards.py  cron.py  db.py  devtrack_insights.py  duplicate_checker.py  git_insights.py  image_generator.py  knowledge_base.py  linkedin_client.py  models.py  observability.py  podcast_insights.py  post_processor.py  publisher.py  scheduler.py  scraper.py  screenshotter.py  self_learner.py  stock_insights.py  token_manager.py  topic_rotator.py  transcription.py  wakatime_insights.py  writer.py  x_client.py
static/: dashboard.html
templates/: voice_samples.txt
tests/: conftest.py  test_analytics_worker.py  test_api.py  test_backup.py  test_cards.py  test_cron.py  test_database.py  test_devtrack_insights.py  test_duplicate_checker.py  test_git_insights.py  test_image_generator.py  test_knowledge_base.py  test_linkedin_client.py  test_observability.py  test_podcast_cache.py  test_podcast_insights.py  test_post_processor.py  test_publisher.py  test_scheduler.py  test_scraper.py  test_screenshotter.py  test_self_learner.py  (+8 more)
(+1 files in other folders)
