[project]
name = "lubot-publisher"
version = "0.1.0"
description = "Autonomous LinkedIn Content Engine"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/api.py" = ["B008"]  # FastAPI Depends() in function defaults is idiomatic
"scripts/*.py" = ["E402", "N806"]  # Scripts need imports after env setup

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
